# robotics

./: A*star.py  README.md  breadth_first_search.py  bspline_path.py  dijkstra.py
completedesign/: CMakeLists.txt  package.xml  urdf.rviz
completedesign/config/: joint_names_completedesign.yaml
completedesign/launch/: display.launch  gazebo.launch
completedesign/meshes/: base_link.STL  wheel1.STL
completedesign/urdf/: completedesign.csv  completedesign.urdf
design_urdf/: CMakeLists.txt  package.xml
design_urdf/meshes/: base_link.STL  base_links.STL  wheel2.STL
design_urdf/urdf/: chefbot_gazebo.urdf.xacro  design.urdf  design.xacro  design_gazebo.xacro  kinect.urdf.xacro  wheel.xacro
mower/: coverage_path_planner.py
realone/: CMakeLists.txt  correct.pgm  correct.yaml  package.xml  second.pgm  second.yaml  thanks.yaml
realone/includes/: amcl.launch.xml  amcl.launch.xml~  move_base.launch.xml  move_base.launch.xml~
realone/launch/: amcls.launch  display.launch  empty_world.world  gazebo.launch  gmapping.launch  robot_pose.launch  room.sdf  thanks.pgm  view_navigation.launch
realone/launch/experiment/: model.sdf
realone/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_costmap_params.yaml~  local_costmap_params.yaml~
